--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@wailsapp/runtime": "^1.0.10",
     "core-js": "^3.6.4",
     "react": "^16.13.1",
+    "react-countdown-clock": "^2.7.0",
     "react-dom": "^16.13.1",
-    "wails-react-scripts": "3.0.1-2",
+    "react-draggable": "^4.4.3",
     "react-modal": "3.11.2",
-    "@wailsapp/runtime": "^1.0.10"
+    "react-stopwatch-timer": "^1.0.0",
+    "styled-components": "^5.2.1",
+    "wails-react-scripts": "3.0.1-2"
   },
   "scripts": {
     "start": "react-scripts start",
